test/invalid/backtick_string_unfinished.d
//T error: backtick_string_unfinished.d:4:11:
//T error: Unexpected termination of literal

string s = `plop
